--- a/src/app/ui/variables.scss
+++ b/src/app/ui/variables.scss
@@ -62,8 +62,10 @@ html[data-theme="dark"] {
     --input-border-color:#585858;
     --text-color: #1b1b1b;
     --button-text-color: #ffffff;
-    --button-background-color: #1b1b1b;
-    --button-border-color: #1b1b1b;
+    --button-background-color: #6c54f6;
+    --button-border-color: #6c54f6;
+    // --button-background-color: #1b1b1b;
+    // --button-border-color: #1b1b1b;
     --button-text-color-default: #585858;
     --button-background-color-default: #ffffff;
     --button-border-color-default: #585858;
