--- a/src/features/pet/filterPets/ui/filterPets.module.scss
+++ b/src/features/pet/filterPets/ui/filterPets.module.scss
@@ -1,5 +1,5 @@
 .filter__list {
-margin-top: 52px;
+margin-top: 24px;
   gap: 10px;
   display: flex;
   align-items: center;
@@ -10,6 +10,19 @@ margin-top: 52px;
   display: flex;
   gap: 10px;
   align-items: center;
+  > * {
+    pointer-events: none
+  }
+
+}
+.filter__item_active{
+  @extend .filter__item;
+  > * {
+    color: var(--button-dark-defoult) !important;
+  }
+  > * > *{
+    fill: var(--button-dark-defoult);
+  }
 }
 .filter__item_icon {
 }
