--- a/src/shared/ui/mainContainer/ui/mainContainer.module.scss
+++ b/src/shared/ui/mainContainer/ui/mainContainer.module.scss
@@ -1,10 +1,9 @@
 .container{
-    max-width: 284px;
+    overflow-x: hidden;
+    height: 100%;
     width: 100%;
     margin: 0 auto;
-    padding: 0 10px;
+    padding: 28px;
+    max-width: 412px;
 
-    @media (min-width: 360px) {
-        max-width: 320px;
-      }
 }
