--- a/src/shared/ui/text/ui/text.module.scss
+++ b/src/shared/ui/text/ui/text.module.scss
@@ -3,18 +3,15 @@
   font-weight: 400;
   font-size: 10px;
   line-height: 202%;
-  color: var(--labels-primary);
-}
-.gray {
-  font-family: var(--font-family);
-  font-weight: 400;
-  font-size: 10px;
-  line-height: 202%;
-  color: var(--gray-backgr-element);
+  @media (min-width: 360px) {
+    font-size: 11px;
+  }
+  @media (min-width: 412px) {
+    font-size: 12px;
+  }
 }
 
 .title {
-  color: var(--text-color);
   margin: 0;
   font-size: 32px;
   font-weight: 600;
@@ -24,5 +21,37 @@
   font-weight: 590;
   font-size: 14px;
   line-height: 145%;
+  @media (min-width: 360px) {
+    font-size: 15px;
+  }
+  @media (min-width: 412px) {
+    font-size: 18px;
+  }
+}
+
+.btn{
+  font-family: var(--font-family);
+font-weight: 500;
+font-size: 14px;
+line-height: 129%;
+}
+
+.medium {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 150%;
+}
+
+.black {
   color: var(--labels-primary);
+}
+.white {
+  color: var(--white---primary);
+}
+.gray {
+  color: var(--gray-backgr-element);
+}
+.btn{
+  color: var(--button-dark-defoult);
 }
