--- a/src/entities/pet/ui/petCard.module.scss
+++ b/src/entities/pet/ui/petCard.module.scss
@@ -16,6 +16,7 @@
   width: 100%;
 }
 .card__image_container {
+  position: relative;
   width: 100%;
   border-radius: 8px;
   aspect-ratio: 1;
@@ -34,3 +35,29 @@
     margin-right: 20px;
   }
 }
+
+  .status {
+    z-index: 5;
+    position: absolute;
+    top: 8px;
+    right: 6px;
+    width: fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    padding: 0px 14px;
+    background-color: var(--primary-green);
+    max-height: 18px;
+    @media (min-width: 360px) {
+      max-height: 21px;
+    }
+    @media (min-width: 412px) {
+      max-height: 24px;
+    }
+  }
+
+  .card__like {
+    width: 16px;
+    height: 15px;
+  }
