--- a/src/shared/ui/button/ui/button.module.scss
+++ b/src/shared/ui/button/ui/button.module.scss
@@ -1,34 +1,34 @@
+.default {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 10px 12px;
+  gap: 8px;
+  border-radius: 8px;
+  font-family: Inter;
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 24px;
+  color: var(--text-color);
+  border: 1px solid var(--button-border-color-default);
+  background-color: var(--button-background-color-default);
+  cursor: pointer;
+  // &:hover {
+  //   background-color: #2980b9;
+  // }
+}
 
-  .default {
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    text-align: center;
-    padding: 10px 12px;
-    gap: 8px;
-    border-radius: 8px;
-    font-family: Inter;
-    font-size: 17px;
-    font-weight: 500;
-    line-height: 24px;
-    color:var(--button-background-color);
-    border: 1px solid var(--button-border-color-default);
-    background-color: var(--button-background-color-default);
-    cursor: pointer;
-    // &:hover {
-    //   background-color: #2980b9;
-    // }
-    
-  }
-
-  .active{
-    @extend .default ;
-    border: none;
-    color:var(--button-text-color);
-    border: 1px solid var(--button-border-color);
-    background-color: var(--button-background-color);
-  }
-
-
-
-
+.active {
+  @extend .default;
+  border: none;
+  color: var(--button-text-color);
+  border: 1px solid var(--button-border-color);
+  background-color: var(--button-background-color);
+}
+.authButton {
+  @extend .default;
+  color: var(--button-text-color);
+  border: 1px solid var(--button-border-color-auth);
+  background-color: var(--button-background-color-auth);
+}
