--- a/src/shared/ui/text/ui/text.module.scss
+++ b/src/shared/ui/text/ui/text.module.scss
@@ -11,10 +11,19 @@
   }
 }
 
+.label {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 112%;
+}
+
 .title {
-  margin: 0;
-  font-size: 32px;
-  font-weight: 600;
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 100%;
+  letter-spacing: 0.01em;
 }
 .subtitle {
   font-family: var(--font-family);
@@ -29,11 +38,11 @@
   }
 }
 
-.btn{
+.btn {
   font-family: var(--font-family);
-font-weight: 500;
-font-size: 14px;
-line-height: 129%;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 129%;
 }
 
 .medium {
@@ -42,7 +51,12 @@ line-height: 129%;
   font-size: 12px;
   line-height: 150%;
 }
-
+.small {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 9px;
+  line-height: 200%;
+}
 .black {
   color: var(--labels-primary);
 }
@@ -52,6 +66,6 @@ line-height: 129%;
 .gray {
   color: var(--gray-backgr-element);
 }
-.btn{
+.btn {
   color: var(--button-dark-defoult);
 }
