--- a/src/widgets/authWidget/ui/auth.module.scss
+++ b/src/widgets/authWidget/ui/auth.module.scss
@@ -1,31 +1,50 @@
 .auth {
-  max-width: 500px;
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  &__title {
-    font-size: 30px;
-  }
+  justify-content: center;
+  height: 100%;
   &__top {
     display: flex;
     align-items: center;
+    margin-bottom: 28px;
     > * {
+      width: 50%;
       flex: 1;
     }
+
   }
   &__form {
     display: flex;
     flex-direction: column;
     gap: 20px;
   }
+  &__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 40px;
+  }
 }
 
+.title {
+  text-align: center;
+  margin-bottom: 50px;
+}
 .label {
   display: flex;
   flex-direction: column;
 }
-.code_mask {
-  letter-spacing: 6px;
+
+.agree_message {
   text-align: center;
+  margin-top: 30px;
+}
+.confirm__text {
+  margin-top: -20px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  gap: 10px;
+  margin-bottom: 30px;
 }
