--- a/src/widgets/petCardDetail/ui/petCardDetail.module.scss
+++ b/src/widgets/petCardDetail/ui/petCardDetail.module.scss
@@ -1,4 +1,4 @@
-.container{
+.container {
   display: flex;
   flex-direction: column;
   min-height: 100%;
@@ -46,8 +46,7 @@
     justify-content: right;
   }
   .like {
-    width: 20px;
-    height: 18px;
+scale: 1.2;
   }
 }
 
@@ -84,13 +83,13 @@
 
 .slide_container {
   position: relative;
-  > img{
+  > img {
     width: 100%;
   }
 }
 
 .info {
- flex: 1;
+  flex: 1;
   display: flex;
   flex-direction: column;
 }
@@ -112,7 +111,7 @@
   height: 40px;
   background-color: var(--button-dark-defoult);
 }
-.important{
+.important {
   margin-top: 18px;
 }
 .important__list {
@@ -144,21 +143,20 @@
   flex-direction: column;
 }
 
-
-.shelter__link{
+.shelter__link {
   display: flex;
   align-items: center;
   gap: 14px;
   margin-bottom: 20px;
 }
-.text_content{
-margin:4px 0
+.text_content {
+  margin: 4px 0;
 }
-.m_top{
+.m_top {
   display: flex;
   flex-direction: column;
   margin-top: auto;
 }
-.more{
-  width:fit-content;
+.more {
+  width: fit-content;
 }
